force-app/main/default/objects/Knowledge__kav/fields/BLN_ArticleType__c.field-meta.xml
<CustomField>
    <fullName>BLN_ArticleType__c</fullName>
    <description>FOUK-5442 This field is used in flow.</description>
    <label>Article Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ISP Knowledge</fullName>
            </value>
            <value>
                <fullName>Specials Flag</fullName>
            </value>
            <value>
                <fullName>Insurance Case</fullName>
            </value>
            <value>
                <fullName>Existing Motorist</fullName>
            </value>
            <value>
                <fullName>Features and Benefits</fullName>
            </value>
            <value>
                <fullName>VAPs</fullName>
            </value>
            <value>
                <fullName>Motability Accounts</fullName>
            </value>
            <value>
                <fullName>Appointment Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>