force-app/main/default/objects/Knowledge__kav/fields/BLN_DataCategory__c.field-meta.xml
<CustomField>
    <fullName>BLN_DataCategory__c</fullName>
    <description>Used for categorised the data.(FOUK-6259)</description>
    <label>Data Category</label>
    <type>TextArea</type>
</CustomField>