force-app/main/default/objects/Knowledge__kav/fields/BLN_Description__c.field-meta.xml
<CustomField>
    <fullName>BLN_Description__c</fullName>
    <description>Used for article description.</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>