force-app/main/default/objects/Knowledge__kav/fields/BLN_DisplayLocation__c.field-meta.xml
<CustomField>
    <fullName>BLN_DisplayLocation__c</fullName>
    <description>FOUK 4914
Picklist of Display Loaction value.</description>
    <label>Display Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Summary</fullName>
            </value>
            <value>
                <fullName>Quote Presentation</fullName>
            </value>
            <value>
                <fullName>Detail Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>