force-app/main/default/objects/Knowledge__kav/fields/Procedure_Audience__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Audience__c</fullName>
    <inlineHelpText>Use this field to identify who should follow or execute this procedure.  If you have a set list of people or groups, you could convert it to a pre-defined picklist.</inlineHelpText>
    <label>Procedure Audience</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>