force-app/main/default/objects/Knowledge__kav/recordTypes/BLN_Contracts.recordType-meta.xml
<RecordType>
    <fullName>BLN_Contracts</fullName>
    <active>true</active>
    <description>Record type of capture Contract Articles</description>
    <label>Contracts</label>
</RecordType>