force-app/main/default/objects/Knowledge__kav/recordTypes/BLN_CustomScript.recordType-meta.xml
<RecordType>
    <fullName>BLN_CustomScript</fullName>
    <active>true</active>
    <description>This RecordType is created for Scripting Articles</description>
    <label>Custom Script</label>
</RecordType>