force-app/main/default/objects/Knowledge__kav/recordTypes/BLN_HowTo.recordType-meta.xml
<RecordType>
    <fullName>BLN_HowTo</fullName>
    <active>true</active>
    <description>For step-by-step instructions</description>
    <label>How To</label>
</RecordType>