force-app/main/default/objects/Knowledge__kav/recordTypes/BLN_Tender.recordType-meta.xml
<RecordType>
    <fullName>BLN_Tender</fullName>
    <active>true</active>
    <description>Record type of capture Tender Articles</description>
    <label>Tender</label>
</RecordType>