force-app/main/default/objects/Knowledge__kav/recordTypes/FAQCommunity.recordType-meta.xml
<RecordType>
    <fullName>FAQCommunity</fullName>
    <active>true</active>
    <label>FAQ Community</label>
</RecordType>