force-app/main/default/objects/Knowledge__kav/listViews/BLN_TenderArticle.listView-meta.xml
<ListView>
    <fullName>BLN_TenderArticle</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>RECORDTYPE</columns>
    <columns>BLN_DataCategory__c</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.BLN_Tender</value>
    </filters>
    <label>Tender Article</label>
</ListView>